# example-10-releases-python-zdanielr

./: LICENSE  phrases.txt  requirements.txt  setup.cfg  tox.ini
docs/: conftest.html  index.html
docs/guess/: GuessResult.html  GuessingGame.html  Main.html  Renderer.html  index.html
src/: __init__.py  __main__.py
src/guess/: GuessResult.py  GuessingGame.py  Main.py  Renderer.py  __init__.py
test/: __init__.py
test/guess/: __init__.py  test_GuessingGame.py
