[metadata]
name = guessinggame
version = 0.0.1
author = Zach Rankin
author_email = zdanielr@ksu.edu
description = A fun guessing game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-zdanielr
    Bug Tracker = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-zdanielr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: <MIT License>
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package-data = True

[options.package_data]
<ourprojectname> = py.typed